--- a/website/docker/backend/Dockerfile
+++ b/website/docker/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
-RUN npm install -g pnpm && pnpm install --prod
+RUN npm install --production
 COPY . .
 EXPOSE 3001
 CMD ["node", "backend/index.js"]
