--- a/website/vercel.json
+++ b/website/vercel.json
@@ -11,5 +11,6 @@
   ],
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "environments": ["production", "preview", "development"]
 }
