Update Vercel config to use npm ci for clean dependency installation

--- a/website/vercel.json
+++ b/website/vercel.json
@@ -10,6 +10,6 @@
     }
   ],
   "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "installCommand": "npm ci",
   "buildCommand": "npx vite build"
 }
