--- a/website/package.json
+++ b/website/package.json
@@ -56,6 +56,7 @@
   "license": "PROPRIETARY",
   "dependencies": {
     "@auth0/auth0-react": "^2.8.0",
+    "@aws-sdk/client-ses": "^3.932.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -121,6 +122,7 @@
     "nodemailer": "^6.9.16",
     "openai": "^6.8.1",
     "pdf-parse": "^2.4.5",
+    "pg": "^8.16.3",
     "posthog-js": "^1.270.1",
     "posthog-node": "^5.9.2",
     "react": "^18.2.0",
@@ -137,7 +139,8 @@
     "uuid": "^13.0.0",
     "xml2js": "^0.6.2",
     "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "csv-parser": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
