FEAT: Implement full Gmail integration for inbox
This commit introduces comprehensive Gmail integration for the CRM's inbox feature. Key functionalities include:

- **Gmail OAuth 2.0 Integration:** Users can now connect their Gmail accounts securely via OAuth, with tokens stored in a new  Supabase table.
- **Email Syncing:** Emails from connected Gmail accounts can be synced into the CRM's  table, preventing duplicates using Gmail message IDs.
- **Email Sending:** Users can compose and send emails directly from the CRM using their connected Gmail account. Sent emails are also recorded in the CRM's  table.
- **Gmail Profile & Signature Fetching:** Basic functionality to retrieve user's Gmail profile and signature.
- **Frontend UI Enhancements:**
    - Added 'Connect Gmail' and 'Sync Gmail' buttons to the Inbox page.
    - Implemented a 'Compose Email' modal for sending new emails.
- **Backend Services & Routes:**
    - New  for all Gmail API interactions.
    - Enhanced  to orchestrate Gmail syncing and sending.
    - New  routes for OAuth flow.
    - Updated  routes with  and  endpoints.
- **Dependency Management:** Added  for email parsing.
- **Environment Variables:** Updated  with necessary Google OAuth credentials.

--- a/website/.env.example
+++ b/website/.env.example
@@ -46,12 +46,12 @@ JWT_SECRET=your_jwt_secret_min_32_chars
 # Google OAuth (Optional)
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=http://localhost:3001/api/gmail/callback # This should match the redirect URI configured in your Google Cloud project
 
 # Gmail API (Email integration)
-GMAIL_CLIENT_ID=your_gmail_client_id
-GMAIL_CLIENT_SECRET=your_gmail_client_secret
+# GMAIL_CLIENT_ID=your_gmail_client_id # Use GOOGLE_CLIENT_ID instead
+# GMAIL_CLIENT_SECRET=your_gmail_client_secret # Use GOOGLE_CLIENT_SECRET instead
 GMAIL_REFRESH_TOKEN=your_gmail_refresh_token
-GMAIL_REDIRECT_URI=http://localhost:3001/api/gmail/callback
 
 # SendGrid (Transactional emails)
 SENDGRID_API_KEY=your_sendgrid_api_key
