--- a/website/package.json
+++ b/website/package.json
@@ -71,6 +71,7 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.0.2",
@@ -102,7 +103,8 @@
     "cmdk": "^0.2.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "date-fns": "^3.3.1",
+    "csv-parser": "^3.0.0",
+    "date-fns": "^3.6.0",
     "dns-packet": "^5.6.1",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
@@ -113,6 +115,7 @@
     "helmet": "^7.1.0",
     "imap": "^0.8.19",
     "ioredis": "^5.8.2",
+    "js-base64": "^3.7.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "mailparser": "^3.9.0",
@@ -129,18 +132,19 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-email": "^2.1.0",
+    "react-grid-layout": "^1.5.2",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^7.9.3",
-    "recharts": "^2.12.2",
+    "reactflow": "^11.11.4",
+    "recharts": "^2.15.4",
     "stripe": "^14.21.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
     "xml2js": "^0.6.2",
     "zod": "^3.22.4",
-    "zustand": "^4.5.2",
-    "csv-parser": "^3.0.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
