--- a/website/vercel.json
+++ b/website/vercel.json
@@ -14,11 +14,41 @@
       "handle": "filesystem"
     },
     {
+      "src": "/api/(.*)",
+      "status": 404,
+      "dest": "/api/404"
+    },
+    {
+      "src": "/(.*\\.(js|css|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|mp4|webm|webp))",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
   ],
   "outputDirectory": "dist",
   "installCommand": "npm ci",
-  "buildCommand": "npx vite build"
+  "buildCommand": "npx vite build",
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
+    }
+  ]
 }
